feat: add markup

--- a/src/includes/section-header.html
+++ b/src/includes/section-header.html
@@ -1,4 +1,4 @@
-<header class="section section--header pt-20 pb-20 z-index-3 fixed" data-header>
+<header class="section section--header pt-20 pb-20 z-index-3" data-header>
     <div class="container">
         <div class="toolbar toolbar--gap-24">
             <a class="logo logo--header" href="./">
