--- a/src/styles/base/margins.scss
+++ b/src/styles/base/margins.scss
@@ -302,6 +302,11 @@
             margin-bottom: rem(100);
         }
     }
+    &-105 {
+        @include r(1000) {
+            margin-bottom: rem(105);
+        }
+    }
 }
 
 .mbm {
