--- a/src/styles/blocks/_index.scss
+++ b/src/styles/blocks/_index.scss
@@ -1,29 +1,39 @@
+@import "agreement";
+@import "article-contact";
 @import "article-doc";
 @import "article-factoid";
+@import "article-gallery";
+@import "article-intro";
 @import "article-partner";
 @import "article-review";
 @import "article-search";
 @import "article-search-preview";
 @import "article-service";
 @import "article-step";
+@import "article-vacancy";
 @import "button-head";
 @import "body";
 @import "breadcrumbs";
 @import "button";
 @import "columns";
 @import "container";
+@import "container-form";
 @import "cover";
 @import "decor";
 @import "editor";
+@import "field";
 @import "footer-info";
 @import "form";
 @import "hr";
 @import "input";
+@import "input-file";
+@import "link-contact";
 @import "link-footer";
 @import "link-head";
 @import "links-doc";
 @import "logo";
 @import "main";
+@import "map-section";
 @import "nav";
 @import "nav-slider";
 @import "process";
