--- a/src/styles/blocks/article-review.scss
+++ b/src/styles/blocks/article-review.scss
@@ -1,9 +1,25 @@
 .article-review {
+    height: 100%;
     min-height: rem(275);
     border-radius: rem(2);
     background-color: $text-white;
-    padding: rem(16) rem(32) rem(16) rem(32);
     box-shadow: 0 0 rem(50) -1px rgba(96, 107, 143, 0.16);
+
+    &__picture {
+        display: block;
+        height: rem(196);
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+        }
+    }
+
+    &__content {
+        padding: rem(20) rem(32) rem(16) rem(32);
+    }
 
     &__header {
         gap: rem(24);
