--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -1,8 +1,6 @@
 .section {
     z-index: 1;
     position: relative;
-    border-top: 1px solid blue;
-    border-bottom: 1px solid green;
 
     &.z-index-1 {
         z-index: 1;
@@ -27,5 +25,12 @@
             background-color: $light;
             box-shadow: 0 0 rem(50) 0 rgba(96, 107, 143, 0.16);
         }
+    }
+}
+
+.dev {
+    .section {
+        border-top: 1px solid blue;
+        border-bottom: 1px solid green;
     }
 }
