--- a/src/styles/blocks/shift.scss
+++ b/src/styles/blocks/shift.scss
@@ -96,6 +96,100 @@
         }
     }
 
+    &--offers {
+        @include r(700) {
+            padding-top: rem(190);
+        }
+
+        .shift {
+
+            &__picture {
+                width: rem(682);
+                height: rem(170);
+
+                @include r(1300) {
+                    width: rem(540);
+                    height: rem(214);
+                }
+
+                @include r(1000) {
+                    top: 0;
+                    bottom: auto;
+                    width: rem(390);
+                }
+
+                @include r(700) {
+                    width: 100vw;
+                    left: rem(-20);
+                }
+            }
+
+            &__content {
+                width: 100%;
+                margin-top: rem(24);
+                max-width: rem(610);
+
+                @include r(1300) {
+                    max-width: rem(475);
+                }
+
+                @include r(1000) {
+                    //    width: 100%;
+                    max-width: rem(324);
+                    //    margin-bottom: rem(135);
+                }
+                //
+                @include r(700) {
+                    width: 100%;
+                    margin-top: 0;
+                    max-width: 100%;
+                }
+            }
+        }
+    }
+
+    &--vacancy {
+        .shift {
+            &__picture {
+                width: rem(669);
+                height: rem(440);
+
+                @include r(1300) {
+                    width: rem(501);
+                    height: rem(352);
+                }
+
+                @include r(1000) {
+                    width: 100vw;
+                    left: rem(-50);
+                    height: rem(350);
+                }
+
+                @include r(700) {
+                    left: rem(-20);
+                }
+            }
+
+            &__content {
+                width: rem(610);
+
+                @include r(1300) {
+                    width: rem(564);
+                }
+
+                @include r(1000) {
+                    width: 100%;
+                    max-width: 100%;
+                    margin-bottom: rem(200);
+                }
+
+                @include r(700) {
+
+                }
+            }
+        }
+    }
+
     &__picture {
         left: 0;
         right: 0;
@@ -119,6 +213,7 @@
             top: 0;
             left: 0;
             bottom: 0;
+            z-index: 1;
             content: "";
             opacity: 0.7;
             display: block;
@@ -133,10 +228,19 @@
             @include r(1000) {
                 width: rem(164);
             }
+        }
 
-            @include r(700) {
-
-            }
+        &:after {
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: 0;
+            content: "";
+            opacity: 0.2;
+            display: block;
+            position: absolute;
+            background-color: $blue-primary;
         }
 
         img {
@@ -149,6 +253,7 @@
 
     &__content {
         right: 0;
+        z-index: 1;
         padding: rem(32);
         position: relative;
         margin-top: rem(32);
