feat: add markup

--- a/src/styles/blocks/_index.scss
+++ b/src/styles/blocks/_index.scss
@@ -34,6 +34,7 @@
 @import "logo";
 @import "main";
 @import "map-section";
+@import "marker";
 @import "nav";
 @import "nav-slider";
 @import "process";
@@ -44,6 +45,7 @@
 @import "shift";
 @import "slider";
 @import "socials";
+@import "table";
 @import "title";
 @import "toolbar";
 
