--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -4915,6 +4915,39 @@ a.logo:hover {
   height: 100%;
 }
 
+.marker {
+  gap: 0.5rem;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.marker__picture {
+  display: block;
+  -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
+          flex-shrink: 0;
+  width: 0.75rem;
+  height: 0.75rem;
+}
+.marker__picture img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+.marker__caption {
+  font-weight: 500;
+  font-size: 1rem;
+}
+
 .nav {
   gap: 1.5rem;
   display: -webkit-box;
@@ -5768,6 +5801,182 @@ button.nav__link {
 .socials__icon--vk {
   width: 3rem;
   height: 3rem;
+}
+
+.table {
+  width: 100%;
+}
+.table__header {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  color: #FFFFFF;
+  min-height: 4.375rem;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #273366;
+}
+.table__section.opened .table__content {
+  height: auto;
+}
+.table__section.opened .table__icon {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+.table__control {
+  width: 100%;
+  border: none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer;
+  padding: 0 1.5rem;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 3.375rem;
+  font-family: inherit;
+  color: #273366;
+  background-color: #E6E6F5;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-transition: 0.3s background-color;
+  transition: 0.3s background-color;
+}
+.table__control:hover {
+  background-color: #DFDFF2;
+}
+.table__content {
+  height: 0;
+  overflow: hidden;
+}
+.table__icon {
+  height: 0.375rem;
+  width: 0.625rem;
+  display: block;
+  fill: #4E5677;
+}
+.table__line {
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-transition: 0.3s background-color;
+  transition: 0.3s background-color;
+}
+.table__line--header {
+  color: #FFFFFF;
+}
+.table__line--regular {
+  color: #4E5677;
+}
+.table__line--regular:hover {
+  background-color: #F1F1FA;
+}
+.table__column {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
+          flex-shrink: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 1.25rem 0 1.25rem 1rem;
+}
+.table__column:first-of-type {
+  padding-left: 1.5rem;
+}
+.table__column--15 {
+  width: 15%;
+}
+.table__column--25 {
+  width: 25%;
+}
+.table__column--30 {
+  width: 30%;
+}
+.table__column--40 {
+  width: 40%;
+}
+.table__column--fill {
+  padding: 0;
+}
+@media only screen and (max-width: 1000px) {
+  .table__column--tab-25 {
+    width: 25%;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .table__column--desktop-only {
+    display: none;
+  }
+}
+.table__column--tab {
+  display: none;
+}
+@media only screen and (max-width: 1000px) {
+  .table__column--tab {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+.table__button {
+  width: 100%;
+  height: 100%;
+  border: none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer;
+  color: #FFFFFF;
+  font-size: 0.875rem;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #32407B;
+  -webkit-transition: 0.3s background-color;
+  transition: 0.3s background-color;
+}
+.table__button:hover {
+  background-color: #273366;
+}
+.table__text {
+  line-height: 1.2;
+  font-weight: 400;
+  font-size: 1rem;
+}
+.table__text--title {
+  font-weight: 700;
+  font-size: 1.125rem;
 }
 
 .title {
