--- a/src/styles/blocks/article-factoid.scss
+++ b/src/styles/blocks/article-factoid.scss
@@ -44,6 +44,7 @@
         color: $text-primary;
 
         @include r(700) {
+            line-height: 1.35;
             font-size: rem(16);
         }
     }
