--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -8,6 +8,7 @@
     align-items: center;
     transition: 0.3s all;
     border-radius: rem(2);
+    text-decoration: none;
     justify-content: center;
     background-color: $blue-resolution;
 
