--- a/src/styles/base/paddings.scss
+++ b/src/styles/base/paddings.scss
@@ -294,6 +294,11 @@
 }
 
 .ptt {
+    &-0 {
+        @include r(1000) {
+            padding-top: rem(0);
+        }
+    }
     &-1 {
         @include r(1000) {
             padding-top: rem(1);
