--- a/src/styles/blocks/_index.scss
+++ b/src/styles/blocks/_index.scss
@@ -31,11 +31,16 @@
 @import "link-contact";
 @import "link-footer";
 @import "link-head";
+@import "link-menu";
+@import "link-menu-aside";
+@import "link-social";
 @import "links-doc";
 @import "logo";
 @import "main";
 @import "map-section";
 @import "marker";
+@import "menu";
+@import "menu-footer";
 @import "nav";
 @import "nav-slider";
 @import "process";
