--- a/src/styles/blocks/link-contact.scss
+++ b/src/styles/blocks/link-contact.scss
@@ -2,24 +2,18 @@
     gap: rem(8);
     display: flex;
     color: inherit;
+    line-height: 1.5;
     align-items: center;
 
     @at-root {
         a#{&} {
             text-decoration: none;
             transition: 0.3s opacity;
-
-            &:hover {
-                opacity: 0.7;
-            }
         }
+
         button#{&} {
             text-decoration: none;
             transition: 0.3s opacity;
-
-            &:hover {
-                opacity: 0.7;
-            }
         }
     }
 
@@ -27,8 +21,74 @@
         font-weight: 500;
         font-size: rem(16);
 
+        @at-root {
+            a#{&} {
+                text-decoration: none;
+                transition: 0.3s opacity;
+
+                &:hover {
+                    opacity: 0.7;
+                }
+            }
+
+            button#{&} {
+                text-decoration: none;
+                transition: 0.3s opacity;
+
+                &:hover {
+                    opacity: 0.7;
+                }
+            }
+        }
+
         @include r(1300) {
             font-size: rem(18);
+        }
+    }
+
+    &--menu {
+        gap: rem(12);
+        font-size: rem(20);
+        color: $text-secondary-2;
+
+        @include r(1300) {
+            font-size: rem(16);
+        }
+
+        @include r(1300) {
+            gap: rem(8);
+        }
+
+        @at-root {
+            a#{&} {
+                transition: 0.3s all;
+                text-decoration: none;
+
+                &:hover {
+                    opacity: 1;
+                    color: $icon;
+                }
+            }
+
+            button#{&} {
+                transition: 0.3s all;
+                text-decoration: none;
+
+                &:hover {
+                    opacity: 1;
+                    color: $icon;
+                }
+            }
+        }
+
+        .link-contact__icon {
+            width: rem(32);
+            height: rem(32);
+
+            @include r(1300) {
+                width: rem(24);
+                height: rem(24);
+            }
         }
     }
 
