feat: add content page

--- a/src/styles/blocks/_index.scss
+++ b/src/styles/blocks/_index.scss
@@ -28,11 +28,13 @@
 @import "container";
 @import "container-form";
 @import "cover";
+@import "date";
 @import "decor";
 @import "editor";
 @import "field";
 @import "footer-info";
 @import "form";
+@import "form-search";
 @import "hr";
 @import "input";
 @import "input-file";
