--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -5018,6 +5018,14 @@ button {
   }
 }
 
+.date {
+  width: 100%;
+  display: block;
+  line-height: 1.2;
+  font-size: 0.75rem;
+  color: #848CAA;
+}
+
 .decor-1:after {
   left: 0;
   right: 0;
@@ -5193,11 +5201,11 @@ button {
   line-height: 1.2;
   margin-bottom: 1em;
 }
-.editor h2 {
+.editor h1, .editor h2 {
   font-size: 2rem;
 }
 @media only screen and (max-width: 1200px) {
-  .editor h2 {
+  .editor h1, .editor h2 {
     font-size: 2.25rem;
   }
 }
@@ -5479,6 +5487,82 @@ a.footer-info__link {
 }
 a.footer-info__link:hover {
   opacity: 0.7;
+}
+
+.form-search {
+  width: 100%;
+  display: block;
+  overflow: hidden;
+  position: relative;
+  border-radius: 0.125rem;
+}
+.form-search__input {
+  width: 100%;
+  border: none;
+  display: block;
+  height: 2.375rem;
+  font-size: 0.75rem;
+  font-family: inherit;
+  text-overflow: ellipsis;
+  color: #273366;
+  background-color: #E6E6F5;
+  padding: 0 3.125rem 0 0.75rem;
+}
+@media only screen and (max-width: 700px) {
+  .form-search__input {
+    height: 2.875rem;
+    font-size: 1rem;
+  }
+}
+.form-search__input::-webkit-input-placeholder {
+  color: #273366;
+}
+.form-search__input::-moz-placeholder {
+  color: #273366;
+}
+.form-search__input:-ms-input-placeholder {
+  color: #273366;
+}
+.form-search__input::-ms-input-placeholder {
+  color: #273366;
+}
+.form-search__input::placeholder {
+  color: #273366;
+}
+.form-search__button {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  padding: 0;
+  border: none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 2.375rem;
+  cursor: pointer;
+  background: none;
+  position: absolute;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.form-search__icon {
+  display: block;
+  width: 1.625rem;
+  height: 1.625rem;
+  fill: #273366;
+}
+@media only screen and (max-width: 700px) {
+  .form-search__icon {
+    width: 1.875rem;
+    height: 1.875rem;
+  }
 }
 
 .hr {
