--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -3149,7 +3149,6 @@ button {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  font-weight: 700;
   line-height: 1.4;
   font-size: 1rem;
   -webkit-box-align: center;
@@ -3170,10 +3169,17 @@ button {
 .article-manual:hover {
   background-color: #273366;
 }
+.article-manual[hidden] {
+  display: none;
+  visibility: hidden;
+}
 @media only screen and (max-width: 700px) {
   .article-manual {
     font-size: 1.125rem;
   }
+}
+.article-manual__title {
+  font-weight: 700;
 }
 .article-manual__icon {
   fill: #FFFFFF;
@@ -3182,6 +3188,44 @@ button {
           flex-shrink: 0;
   width: 2rem;
   height: 2rem;
+}
+.article-manual mark {
+  color: #273366;
+  background: #FEFEFE;
+}
+
+.article-manual-aside {
+  margin-bottom: 0.625rem;
+}
+.article-manual-aside:last-of-type {
+  margin-bottom: 0;
+}
+.article-manual-aside__title {
+  font-weight: 500;
+  line-height: 1.6;
+  font-size: 0.875rem;
+  color: #273366;
+  margin-bottom: 0.625rem;
+}
+.article-manual-aside__link {
+  display: block;
+  font-weight: 500;
+  line-height: 1.6;
+  font-size: 0.875rem;
+  text-decoration: none;
+  margin-bottom: 0.625rem;
+  color: #848CAA;
+}
+.article-manual-aside__link:last-of-type {
+  margin-bottom: 0;
+}
+.article-manual-aside__link[hidden] {
+  display: none;
+  visibility: hidden;
+}
+.article-manual-aside__link mark {
+  color: #FFFFFF;
+  background-color: #848CAA;
 }
 
 .article-news {
@@ -7229,10 +7273,46 @@ button.nav__link {
   top: 94px;
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   position: -webkit-sticky;
   position: sticky;
-  background-color: #273366;
+  padding: 1.25rem 0;
+  border-radius: 0.125rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #FEFEFE;
   max-height: calc(100vh - 6.875rem);
+  -webkit-box-shadow: 0 0 3.125rem -0.0625rem rgba(96, 107, 143, 0.16);
+          box-shadow: 0 0 3.125rem -0.0625rem rgba(96, 107, 143, 0.16);
+}
+.sidebar__header {
+  padding: 0 1rem 0 1rem;
+}
+.sidebar__main {
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  overflow-y: auto;
+  padding: 0.625rem 0.125rem 0 1rem;
+}
+.sidebar__main::-webkit-scrollbar {
+  width: 0.875rem;
+  border-radius: 0.125rem;
+}
+.sidebar__main::-webkit-scrollbar-track {
+  background: none;
+}
+.sidebar__main::-webkit-scrollbar-thumb {
+  border-radius: 0.75rem;
+  border: 6px solid #FFFFFF;
+  background-color: #C5CADC;
 }
 
 .slider__container--overflow {
