--- a/src/styles/blocks/_index.scss
+++ b/src/styles/blocks/_index.scss
@@ -6,6 +6,7 @@
 @import "article-intro";
 @import "article-item";
 @import "article-manual";
+@import "article-manual-aside";
 @import "article-news";
 @import "article-partner";
 @import "article-prop";
