--- a/src/styles/blocks/sidebar.scss
+++ b/src/styles/blocks/sidebar.scss
@@ -2,7 +2,39 @@
     top: 94px;
     width: 100%;
     height: 100%;
+    display: flex;
     position: sticky;
-    background-color: $blue-primary;
+    padding: rem(20) 0;
+    border-radius: rem(2);
+    flex-direction: column;
+    background-color: $white-bg;
     max-height: calc(100vh - rem(110));
+    box-shadow: 0 0 rem(50) rem(-1) rgba(96, 107, 143, 0.16);
+
+    &__header {
+        padding: 0 rem(16) 0 rem(16);
+    }
+
+    &__main {
+        flex-grow: 1;
+        overflow-y: auto;
+        padding: rem(10) rem(2) 0 rem(16);
+
+        // TODO Стилизовать скроллбар для остальных браузеров
+
+        &::-webkit-scrollbar {
+            width: rem(14);
+            border-radius: rem(2);
+        }
+
+        &::-webkit-scrollbar-track {
+            background: none;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            border-radius: rem(12);
+            border: 6px solid $light;
+            background-color: #C5CADC;
+        }
+    }
 }
