feat: add elements

--- a/src/styles/blocks/_index.scss
+++ b/src/styles/blocks/_index.scss
@@ -9,6 +9,7 @@
 @import "article-manual-aside";
 @import "article-news";
 @import "article-partner";
+@import "article-project";
 @import "article-prop";
 @import "article-review";
 @import "article-search";
