--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -224,7 +224,14 @@
 .body--menu {
     .menu {
         max-height: calc(100vh + rem(20));
-        animation: openMenu 0.5s ease-in-out forwards;
+
+        @include rmin(700) {
+            animation: openMenu 0.5s ease-in-out forwards;
+        }
+
+        @include r(700) {
+            animation: openMenuMobile 0.5s ease-in-out forwards;
+        }
 
         &__main {
             &--desktop {
@@ -252,6 +259,17 @@
     99% {
         max-height: 100vh;
         max-width: 45px;
+    }
+    100% {
+        max-height: 100vh;
+        max-width: 100%;
+    }
+}
+
+@keyframes openMenuMobile {
+    0% {
+        max-height: 0;
+        max-width: 100%;
     }
     100% {
         //max-width: 45px;
@@ -283,5 +301,3 @@
         max-width: 100vw;
     }
 }
-
-// Смещение вправо - 21px
