--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -73,6 +73,40 @@
                 width: rem(310);
             }
         }
+
+        &--project {
+            min-height: rem(400);
+
+            @include r(1300) {
+                min-height: rem(315);
+            }
+
+            @include r(1000) {
+                min-height: rem(215);
+            }
+
+            @include r(700) {
+                min-height: rem(160);
+            }
+
+            &-sm {
+                width: calc(100% / 3 - rem(10));
+
+                @include r(700) {
+                    width: 100%;
+                }
+            }
+
+            &-l {
+                width: calc(100% / 3 * 2 - rem(10));
+
+                @include r(700) {
+                    width: 100%;
+                }
+
+            }
+
+        }
     }
 
     &__progressbar {
