--- a/src/styles/blocks/toolbar.scss
+++ b/src/styles/blocks/toolbar.scss
@@ -8,6 +8,22 @@
         justify-content: flex-start;
     }
 
+    &--project {
+        max-width: calc(100% - rem(470));
+
+        @include r(1300) {
+            max-width: calc(100% - rem(460));
+        }
+
+        @include r(1000) {
+            max-width: calc(100% - rem(340));
+        }
+
+        @include r(700) {
+            max-width: 100%;
+        }
+    }
+
     &__link {
         font-weight: 600;
         line-height: 1.3;
